--- a/src/app/about-us/social-media/social-media.component.html
+++ b/src/app/about-us/social-media/social-media.component.html
@@ -1,63 +1,87 @@
 <div class="social_media_overview">
-  <div class="social_media_class default">
-    <a href="https://shop.spreadshirt.ch/zoorig-esport/">
-      <div class="icons iconTwitter">
-        <img src="../../../assets/icons/shopping-cart-solid.svg" alt="">
-      </div>
-    </a>
-    <a href="https://shop.spreadshirt.ch/zoorig-esport/" class="link_text"><p>Zoorig Merch-Shop</p></a>
-  </div>
-  <div class="social_media_class twitter">
-    <a routerLink="twitter">
-      <div class="icons iconTwitter">
-        <img src="../../../assets/icons/socialMedia/twitter.svg" alt="">
-      </div>
-    </a>
-    <a routerLink="twitter" class="link_text"><p>Zoorig on Twitter</p></a>
-  </div>
-  <div class="social_media_class facebook">
-    <a href="https://www.facebook.com/zoorigesport/">
-      <div class="icons iconFacebook">
-        <img src="../../../assets/icons/socialMedia/facebook.svg" alt="">
-      </div>
-    </a>
-    <a href="https://www.facebook.com/zoorigesport/" class="link_text">
-      <p>Zoorig on Facebook</p>
-    </a>
-  </div>
-  <div class="social_media_class instagram">
-    <a href="https://instagram.com/zoorig.eSport/">
-      <div class="icons iconInstagram">
-        <img src="../../../assets/icons/socialMedia/instagram.svg" alt="">
-      </div>
-    </a>
-    <a href="https://instagram.com/zoorig.eSport/" class="link_text">
-      <p>Zoorig on Instagram</p>
-    </a>
-  </div>
-  <div class="social_media_class discord">
-    <a href="https://www.facebook.com/zoorigesport/">
-      <div class="icons iconDiscord">
-        <img src="../../../assets/icons/socialMedia/discord.svg" alt="">
-      </div>
-    </a>
-    <a href="https://www.facebook.com/zoorigesport/" class="link_text"><p>Zoorig on Discord</p></a>
-  </div>
-  <div class="social_media_class twitch">
-    <a href="https://www.twitch.tv/zoorigesport">
-      <div class="icons iconTwitch">
-        <img src="../../../assets/icons/socialMedia/twitch.svg" alt="">
-      </div>
-    </a>
-    <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ" class="link_text"><p>Zoorig on Twitch</p></a>
-  </div>
-  <div class="social_media_class youtube">
-    <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ">
-      <div class="icons iconYoutube">
-        <img src="../../../assets/icons/socialMedia/youtube.svg" alt="">
-      </div>
-    </a>
-    <a href="https://www.twitch.tv/zoorigesport" class="link_text"><p>Zoorig on Youtube</p></a>
-  </div>
+  <a href="https://shop.spreadshirt.ch/zoorig-esport/" target=“_blank“>
+    <div class="social_media_class default">
+      <a href="https://shop.spreadshirt.ch/zoorig-esport/" target=“_blank“>
+        <div class="icons iconTwitter">
+          <img src="../../../assets/icons/shopping-cart-solid.svg" alt="">
+        </div>
+      </a>
+      <a href="https://shop.spreadshirt.ch/zoorig-esport/" class="link_text" target=“_blank“>
+        <p>Zoorig Merch-Shop</p>
+      </a>
+    </div>
+  </a>
+  <a routerLink="twitter">
+    <div class="social_media_class twitter">
+      <a routerLink="twitter">
+        <div class="icons iconTwitter">
+          <img src="../../../assets/icons/socialMedia/twitter.svg" alt="">
+        </div>
+      </a>
+      <a routerLink="twitter" class="link_text">
+        <p>Zoorig on Twitter</p>
+      </a>
+    </div>
+  </a>
+  <a href="https://www.facebook.com/zoorigesport/" target=“_blank“>
+    <div class="social_media_class facebook">
+      <a href="https://www.facebook.com/zoorigesport/" target=“_blank“>
+        <div class="icons iconFacebook">
+          <img src="../../../assets/icons/socialMedia/facebook.svg" alt="">
+        </div>
+      </a>
+      <a href="https://www.facebook.com/zoorigesport/" class="link_text" target=“_blank“>
+        <p>Zoorig on Facebook</p>
+      </a>
+    </div>
+  </a>
+  <a href="https://instagram.com/zoorig.eSport/" target=“_blank“>
+    <div class="social_media_class instagram">
+      <a href="https://instagram.com/zoorig.eSport/" target=“_blank“>
+        <div class="icons iconInstagram">
+          <img src="../../../assets/icons/socialMedia/instagram.svg" alt="">
+        </div>
+      </a>
+      <a href="https://instagram.com/zoorig.eSport/" class="link_text" target=“_blank“>
+        <p>Zoorig on Instagram</p>
+      </a>
+    </div>
+  </a>
+  <a href="https://www.facebook.com/zoorigesport/" target=“_blank“>
+    <div class="social_media_class discord">
+      <a href="https://www.facebook.com/zoorigesport/" target=“_blank“>
+        <div class="icons iconDiscord">
+          <img src="../../../assets/icons/socialMedia/discord.svg" alt="">
+        </div>
+      </a>
+      <a href="https://www.facebook.com/zoorigesport/" class="link_text" target=“_blank“>
+        <p>Zoorig on Discord</p>
+      </a>
+    </div>
+  </a>
+  <a href="https://www.twitch.tv/zoorigesport" target=“_blank“>
+    <div class="social_media_class twitch">
+      <a href="https://www.twitch.tv/zoorigesport" target=“_blank“>
+        <div class="icons iconTwitch">
+          <img src="../../../assets/icons/socialMedia/twitch.svg" alt="">
+        </div>
+      </a>
+      <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ" class="link_text" target=“_blank“>
+        <p>Zoorig on Twitch</p>
+      </a>
+    </div>
+  </a>
+  <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ" target=“_blank“>
+    <div class="social_media_class youtube">
+      <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ" target=“_blank“>
+        <div class="icons iconYoutube">
+          <img src="../../../assets/icons/socialMedia/youtube.svg" alt="">
+        </div>
+      </a>
+      <a href="https://www.twitch.tv/zoorigesport" class="link_text" target=“_blank“>
+        <p>Zoorig on Youtube</p>
+      </a>
+    </div>
+  </a>
 </div>
 
