--- a/src/app/games/fortnite/fortnite.component.sass
+++ b/src/app/games/fortnite/fortnite.component.sass
@@ -1,1 +1,5 @@
 @import "~src/app/games/rocket-league/rocket-league.component"
+
+.backgroundImage
+  background: url("~src/assets/image/games/fortnite.jpg") no-repeat 0 center fixed
+  background-size: cover
