--- a/src/app/games/super-smash-bros/super-smash-bros.component.sass
+++ b/src/app/games/super-smash-bros/super-smash-bros.component.sass
@@ -1,1 +1,5 @@
 @import "~src/app/games/rocket-league/rocket-league.component"
+
+.backgroundImage
+  background: url("../../../assets/image/games/Super-Smash-Bros-Ultimate.jpg") no-repeat 0 center fixed
+  background-size: cover
