--- a/src/app/about-us/social-media/social-media.component.sass
+++ b/src/app/about-us/social-media/social-media.component.sass
@@ -2,12 +2,6 @@
 @import "~src/app/games/games.component"
 @import "~src/app/about-us/about-us.component"
 
-@media screen and (max-width: 1100px)
-  .link_text
-    display: none
-
-  .social_media_class
-    width: 101.98px
 
 
 .social_media_overview
@@ -16,6 +10,9 @@
   width: 100%
   height: calc(100% - #{$navbarHeight})
   flex-wrap: nowrap
+
+  a
+    text-decoration: none
 
   .social_media_class
     display: flex
@@ -38,7 +35,7 @@
         position: relative
 
         img
-          height: 80px
+          height: 70px
           opacity: 0.4
           display: flex
 
@@ -53,29 +50,7 @@
         color: black
         opacity: 0.4
 
-@media screen and (max-width: 1250px)
-  .social_media_class
 
-    a
-
-      .icons
-        height: 75px
-        width: 75px
-
-        img
-          height: 65px
-
-    @media screen and (max-width: 1100px)
-      .social_media_class
-
-        a
-
-          .icons
-            height: 60px
-            width: 60px
-
-            img
-              height: 50px
 
   #social-view
     display: flex
@@ -127,3 +102,10 @@
 
             img
               height: 50px
+
+      @media screen and (max-width: 1100px)
+        .link_text
+          display: none
+
+        .social_media_class
+          width: 101.98px
