--- a/src/app/games/call-of-duty/call-of-duty.component.sass
+++ b/src/app/games/call-of-duty/call-of-duty.component.sass
@@ -1,4 +1,7 @@
 @import "~src/app/games/rocket-league/rocket-league.component"
 
+.backgroundImage
+  background: url("~src/assets/image/games/call-of-duty-black-ops-4.png") no-repeat 0 center fixed
+  background-size: cover
 
 
