--- a/src/app/games/game/game.component.html
+++ b/src/app/games/game/game.component.html
@@ -2,28 +2,28 @@
   <div id="sliders">
     <ul>
       <li class="class_1">
-        <a href="/games/rocket-league">
-          <img alt="" src="../../assets/image/games/rocket-league.jpg" class="slider_img class_1">
+        <a routerLink="/games/rocket-league">
+          <img alt="" src="../../../assets/image/games/rocket-league.jpg" class="slider_img class_1">
         </a>
       </li>
       <li class="class_2">
         <a routerlink="/games/fortnite">
-          <img alt="" src="../../assets/image/games/fortnite.jpg" class="slider_img class_2">
+          <img alt="" src="../../../assets/image/games/fortnite.jpg" class="slider_img class_2">
         </a>
       </li>
       <li class="class_3">
         <a routerlink="/games/super-smash-bros">
-          <img alt="" src="../../assets/image/games/Super%20Smash%20Bros%20Ultimate.jpg" class="slider_img class_3">
+          <img alt="" src="../../../assets/image/games/Super%20Smash%20Bros%20Ultimate.jpg" class="slider_img class_3">
         </a>
       </li>
       <li class="class_4">
         <a routerlink="/games/call-of-duty">
-          <img alt="" src="../../assets/image/games/call-of-duty-black-ops-4.png" class="slider_img class_4">
+          <img alt="" src="../../../assets/image/games/call-of-duty-black-ops-4.png" class="slider_img class_4">
         </a>
       </li>
       <li class="class_5">
         <a routerlink="/games/fifa">
-          <img alt="" src="../../assets/image/games/fifa-19.jpg" class="slider_img class_5">
+          <img alt="" src="../../../assets/image/games/fifa-19.jpg" class="slider_img class_5">
         </a>
       </li>
     </ul>
