--- a/src/app/games/rocket-league/rocket-league.component.sass
+++ b/src/app/games/rocket-league/rocket-league.component.sass
@@ -1,12 +1,17 @@
 @import "~src/styles"
 @import "~src/app/games/games.component"
 
+.backgroundImage
+  background: url("~src/assets/image/games/rocket-league.jpg") no-repeat 0 center fixed
+  background-size: cover
+
 .main
   display: flex
   flex-wrap: wrap
   position: relative
-  width: 100vw
-  height: 100%
+  width: 100%
+  min-height: calc(100vh - #{$navbarHeight})
+  box-sizing: border-box
 
   .player
     display: flex
@@ -14,6 +19,8 @@
     flex-wrap: wrap
     width: 100%
     height: 100%
+    box-sizing: border-box
+
 
     .member:hover .member-contend
       right: 0
@@ -52,6 +59,7 @@
         top: 0
         right: -80%
         transition: all 0.4s ease-in-out 0s
+        background: whitesmoke
 
         .fullName
           display: flex
