--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -1,20 +1,63 @@
-@import "../../styles"
+@import "~src/styles"
+@import "~src/app/games/rocket-league/rocket-league.component"
+
 
 #main
-  margin: 0
-  padding: 0
-  width: 100vw
-  height: $footerHeight
+  width: 100%
   background-color: $backgroundColorFooter
   display: flex
-  justify-items: flex-end
+  justify-content: center
+  flex-direction: column
+  color: $fontColorDefault
 
-
-
-  a
+  .footer-text
     display: flex
-    align-items: center
+    font-size: calc(#{$fontSizeHeadingMedium} *2)
+    padding-top: 20px
     justify-content: center
-    span
+    flex-direction: column
+
+    .footerText
       display: flex
-      color: white
+      justify-content: center
+
+    .memberListSocialMedia
+      display: flex
+      flex-wrap: nowrap
+      flex-direction: row
+      list-style-type: none
+      justify-content: center
+      flex-grow: 10
+
+      .memberListSocialMediaIcons
+        display: flex
+        border-radius: 50%
+        align-content: center
+        justify-content: center
+        position: relative
+
+        a
+          display: flex
+          width: 4rem
+          height: 4rem
+          align-items: baseline
+          justify-content: center
+
+          img
+            display: flex
+            padding-top: 0.7rem
+            width: 3rem
+            height: 3rem
+
+
+  .impressum
+    display: flex
+    flex-direction: row
+    justify-content: center
+    color: $fontColorDefault
+
+    p
+      display: flex
+      padding: 0 10px
+      color: $fontColorDefault
+
