--- a/src/app/games/game/game.component.html
+++ b/src/app/games/game/game.component.html
@@ -7,22 +7,22 @@
         </a>
       </li>
       <li class="class_2">
-        <a routerlink="/games/fortnite">
+        <a routerLink="/games/fortnite">
           <img alt="" src="../../../assets/image/games/fortnite.jpg" class="slider_img class_2">
         </a>
       </li>
       <li class="class_3">
-        <a routerlink="/games/super-smash-bros">
-          <img alt="" src="../../../assets/image/games/Super%20Smash%20Bros%20Ultimate.jpg" class="slider_img class_3">
+        <a routerLink="/games/super-smash-bros">
+          <img alt="" src="../../../assets/image/games/Super-Smash-Bros-Ultimate.jpg" class="slider_img class_3">
         </a>
       </li>
       <li class="class_4">
-        <a routerlink="/games/call-of-duty">
+        <a routerLink="/games/call-of-duty">
           <img alt="" src="../../../assets/image/games/call-of-duty-black-ops-4.png" class="slider_img class_4">
         </a>
       </li>
       <li class="class_5">
-        <a routerlink="/games/fifa">
+        <a routerLink="/games/fifa">
           <img alt="" src="../../../assets/image/games/fifa-19.jpg" class="slider_img class_5">
         </a>
       </li>
