--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,2 @@
-<div id="main" class="backgroundImageNewLogo">
-<!--  <div id="sliders">-->
-<!--    <img src="../../assets/image/new_logo.jpg" class="slider_img class_1" alt="">-->
-<!--    <img src="../../assets/image/transparent.png" class="slider_img class_2" alt="">-->
-<!--    <img src="../../assets/image/new_logo.jpg" class="slider_img class_3" alt="">-->
-<!--    <img src="../../assets/image/logo.png" class="slider_img class_4" alt="">-->
-<!--  </div>-->
-
-</div>
+<div id="main" class="backgroundImageNewLogo"></div>
+<app-contact></app-contact>
