--- a/src/app/about-us/social-media/social-media.component.html
+++ b/src/app/about-us/social-media/social-media.component.html
@@ -35,9 +35,9 @@
       </a>
     </div>
   </a>
-  <a href="https://instagram.com/zoorig.eSport/" target=“_blank“>
+  <a routerLink="instagram">
     <div class="social_media_class instagram">
-      <a href="https://instagram.com/zoorig.eSport/" target=“_blank“>
+      <a routerLink="instagram">
         <div class="icons iconInstagram">
           <img src="../../../assets/icons/socialMedia/instagram.svg" alt="">
         </div>
