--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <div id="main" class="backgroundImageNewLogo">
   <app-social-media class="asideLeft"></app-social-media>
   <app-main class="main"></app-main>
-  <router-outlet name="asideRight"></router-outlet>
+  <div class="asideRight"><router-outlet></router-outlet></div>
 </div>
