--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -4,7 +4,7 @@
 
 #main
   width: 100%
-  background-color: $backgroundColorFooter
+  background-color: gray
   display: flex
   justify-content: center
   flex-direction: column
